devops/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agence-ingress
spec:
  tls:
    - hosts:
        - app.localhost
        - api.localhost
      secretName: agence-prod-tls
  rules:
    - host: app.localhost
    - host: api.localhost
